samples/_failures_safe/1761222231_272551_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc3dd534.c: In function ‘compute_results’:
./samples/SAFE/__tmp_dc3dd534.c:152:5: error: expected ‘,’ or ‘;’ at end of input
  152 |     int max_count = 0
      |     ^~~
./samples/SAFE/__tmp_dc3dd534.c:152:5: error: expected declaration or statement at end of input
